--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .bundle/
 log/*.log
 pkg/
-test/dummy/db/*.sqlite3
-test/dummy/log/*.log
-test/dummy/tmp/
-test/dummy/.sass-cache
+spec/internal/db/*.sqlite
+spec/internal/log/*.log
+spec/internal/tmp/
+spec/internal/.sass-cache
